--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       - ./cat/long_term_memory/vector:/qdrant/storage
     restart: unless-stopped
 
+
   ollama:
     container_name: ollama_cat
     image: ollama/ollama:0.1.23
@@ -47,6 +48,7 @@ services:
       - 11434
     environment:
       - gpus=all
+    # comment the `deploy` part if you are on apple cpu
     deploy:
       resources:
         reservations:
@@ -56,6 +58,15 @@ services:
               capabilities: [gpu]
 
 
-
-
-  
+  ngrok:
+    image: ngrok/ngrok:latest
+    restart: unless-stopped
+    command:
+      - "start"
+      - "--all"
+      - "--config"
+      - "/etc/ngrok.yml"
+    volumes:
+      - ./ngrok.yml:/etc/ngrok.yml
+    ports:
+      - 4040:4040
